# bsv-wallet-infra-cloudflare

./: .gitignore  Cargo.toml  wrangler.toml
docs/: D1_RESTORE_RUNBOOK.md
migrations/: 0003_auth_sessions.sql
src/: dispatch.rs  entities.rs  lib.rs  r2.rs  types.rs
src/services/: arc.rs  bitails.rs  mod.rs  woc.rs
src/storage/: internalize_action.rs  mod.rs  sync.rs  sync_apply.rs  writers.rs
tests/: backup_key_guardrail_proof.py  d1_concurrency_proof.py  f4_fk_fallback_proof.py  f4_merge_proof.py  f4_outputs_upsert_proof.py  f7_inline_blob_proof.py  f9_basket_preservation_proof.py  g3_sync_demote_proof.py  multi_device_backup_proof.py  proof_link_roundtrip_proof.py  spentness_forward_only_proof.py  stat_backups_parity_proof.py
